fix(KUI-89): add last active term to request
